Further work on csplit

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@ basic_csplit_example
 basic_csplit_example_db
 reading_csv_example
 reading_csv_example_db
+*_tests
 .vscode/
 ~*
 *~
 *#
+criterion/
+*.tar.bz2
+*.log
